# jarvis_offline

./: .gitignore  Cargo.toml  README.md  post_build.py
crates/build-rpw/: Cargo.toml
crates/build-rpw/src/: main.rs
crates/jarvis-app/: build.rs
crates/jarvis-app/src/: app.rs  main.rs  tray.rs
crates/jarvis-app/src/tray/: menu.rs
crates/jarvis-cli/: build.rs
crates/jarvis-core/: Cargo.toml
crates/jarvis-core/src/: commands.rs  config.rs  gliner_models.rs  i18n.rs  intent.rs  lib.rs  listener.rs  recorder.rs  slots.rs  stt.rs  vosk_models.rs
crates/jarvis-core/src/audio_processing/noise_suppression/: nnnoiseless.rs
crates/jarvis-core/src/commands/: structs.rs
crates/jarvis-core/src/config/: structs.rs
crates/jarvis-core/src/db/: structs.rs
crates/jarvis-core/src/i18n/locales/: en.ftl  ru.ftl  ua.ftl
crates/jarvis-core/src/intent/: embeddingclassifier.rs
crates/jarvis-core/src/listener/: rustpotter.rs  vosk.rs
crates/jarvis-core/src/lua/: structs.rs  tests.rs
crates/jarvis-core/src/lua/api/: context.rs
crates/jarvis-core/src/models/loaders/: embedding.rs
crates/jarvis-core/src/recorder/: wav_source.rs
crates/jarvis-core/src/slots/: gliner.rs
crates/jarvis-core/src/slots/gliner/: structs.rs
crates/jarvis-core/src/stt/: vosk.rs
crates/jarvis-gui/: Cargo.toml  build.rs  tauri.conf.json
crates/jarvis-gui/src/: events.rs  main.rs  tauri_commands.rs
crates/jarvis-gui/src/tauri_commands/: db.rs  ollama.rs  stt.rs  sys.rs
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  Events.svelte  functions.ts  main.ts  stores.ts  types.ts
frontend/src/__tests__/: commands-filter.test.ts  ipc-utils.test.ts  runtime.test.ts  settings-cache.test.ts  settings.test.ts  toast.test.ts
frontend/src/components/: Footer.svelte  Header.svelte
frontend/src/components/elements/: ArcReactor.svelte  SearchBar.svelte  Stats.svelte
frontend/src/components/layout/: WindowFrame.svelte
frontend/src/components/settings/: TabAbout.svelte  TabDevices.svelte  TabGeneral.svelte  TabNeural.svelte
frontend/src/components/system/: SysEvents.svelte  SysModels.svelte  SysOverview.svelte  SysPipeline.svelte  SysTelemetry.svelte
frontend/src/components/ui/: Button.svelte  Select.svelte  Toasts.svelte
frontend/src/css/: arc-reactor.scss  main.scss  settings.scss  styles.scss  system.scss  tokens.css
frontend/src/lib/: api.ts  bootstrap.ts  commands-filter.ts  db-keys.ts  engine-options.ts  i18n.ts  ipc.ts  settings-loader.ts  settings.ts  toast.ts
frontend/src/lib/ipc/: index.ts  socket.ts  stores.ts  types.ts  utils.ts
frontend/src/lib/stores/: app-info.ts  audio.ts  event-tracker.ts  events.ts  runtime.ts  settings-cache.ts  voice.ts
frontend/src/routes/: [...404].svelte  _module.svelte  index.svelte
frontend/src/routes/commands/: index.svelte
frontend/src/routes/settings/: index.svelte
frontend/src/routes/system/: index.svelte
resources/commands/apps/: apps.lua  command.toml
resources/commands/browser/: close.lua  command.toml  google.lua  open.lua
resources/commands/calculator/: command.toml  open.lua
resources/commands/folders/: command.toml  folders.lua
resources/commands/jarvis/: command.toml
resources/commands/music/: command.toml  music.lua
resources/commands/steam/: close.lua  command.toml  open.lua
resources/commands/stop/: command.toml
resources/commands/terminate/: command.toml
resources/commands/test_slots/: command.toml  greet.lua
resources/commands/timer/: command.toml  timer.lua
resources/commands/volume/: command.toml  mute.lua  set_volume.ps1  volume_set.lua  volume_step.lua
resources/commands/weather/: command.toml
resources/commands/windows/: command.toml  windows.lua
resources/icons/jarvis/AppIcon.appiconset/: Contents.json
resources/models/all-MiniLM-L6-v2/: README.md
resources/models/paraphrase-multilingual-MiniLM-L12-v2-onnx-Q/: .gitattributes  README.md  config.json  model.onnx  tokenizer.json  tokenizer_config.json  unigram.json
resources/rustpotter/: jarvis-ru.rpw
